2012-09-06 Roman
- !!!!:DAQ.ICP_DAS: Support for all main I-87xxx and I-8xxx modules is added. Link with -li8k is fixed. Digital IO reversing set writed by ports.
- FIX:Transport.Serial: Stop output transport at read() error, possible by serial device lost.
- FIX:UI.QTCfg: Size policy for read-values is changed to QSizePolicy::Ignored. Values' labels text selection by mouse is added.
- FIX:UI.WebCfgD: Read-values space for Boolean is added.


2012-09-05 Roman
- FIX:UI.QTCfg: ComboBox items accumulation at update is fixed for no exited table's item delegate.


2012-08-30 Roman
- !!:DB.LibsDB.{OscadaLibs.db,vcaBase.db,vcaTest.db}, DB.AGLKS.*:
    Significant update for document's time generation optimal and new prescriptions concept implementation.
- !!!:DAQ.ICP_DAS: Support for all main ISA-boards is implemented for bus "ISA" and for generic data: AI, AO, DIO, DI and DO.


2012-08-28 Roman
- FIX:DAQ.JavaLikeCalc: Controller's task stop by exception possible and clear flag "prc_st" miss.
    In that case no more controller start possible allow is fixed.


2012-08-24 Roman
- XMLNode: Function XMLNode::getElementBy() is added for find node into XML tree by attribute value.
- !!:UI.VCAEngine: The continuous big documents forming warning message is added with period 5 seconds for data and messages blocks.


2012-08-21 Roman
- FIX:DB: Some fixes into vcaBase.db and OscadaLibs.db.
- FIX:DAQ.JavaLikeCalc: Flag "call_st" clear at start.
- FIX:UI.Vision: Document rebuild at equal properties obtain is prevented.


2012-08-15 Roman
- !!:FIX:Security.User: No reentrant password hash calculation by function crypt() is replaced by reentrant function crypt_r() for set password.
- DAQ.DAQGate: Config field's name "TM_REST_DT" made short.


2012-08-12 Roman
- UI.Vision: Drawing the rects for the points is rewirited optimal.


2012-08-11 Maxim
- FIX:UI.Vision: Drawing the rect for the centre point of the arc is fixed for the primitive ElFigure.